--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,59 @@
-/* Write your code from here
+
+body {
+    font-family: Arial;
+    margin: 20px;
+    background: linear-gradient(90deg, blue, purple);
+
+}
+h1{
+    text-align: center;
+    font-size: 40px;
+    color:black
+}
+h2{
+    text-align: center;
+    font-size:20px;
+    color:black
+}
+.box{
+    height:600px;
+    width:800px;
+    border:2px solid white;
+    border-radius: 20px;
+    margin:400px;
+    background-color: white;
+    color:black
+}
+.quiz-box {
+    max-width: 650px;
+    margin: auto;
+}
+
+button {
+    margin-top:20px;
+    font-size: 40px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 50px;
+    background-color:white;
+    color: rgb(0, 0, 0);
+    border: 1px solid black;
+    cursor: pointer;
+    background-color: blue;
+}
+
+button:hover {
+    background-color: red;
+    color: black;
+}
+
+#score{
+    font-size: 30px;
+    margin: 10px;
+}
+#total{
+    font-size: 30px;
+    text-align: center;
+}
